# SombraAISquad_Diia.AIContest

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  knn_classification_test.py  pyproject.toml  pytest.ini
alembic/: README.md  env.py
app/: main.py
app/api/: deps.py  main.py
app/api/routes/: appeal.py  classify.py  health.py  service_resolve.py  solve_problem.py  voice.py
app/core/: config.py  db.py  logging.py
app/data/: categories.json
app/db_models/: __init__.py  classification.py  services.py
app/llm/: client.py  prompts.py  utils.py
app/llm/prompts/: appeal.txt  audio_transcription.txt  classifier.txt  classifier_safe.txt  extract_data_from_text.txt  letter_system.txt  letter_user.txt  urgency_check.txt
app/schemas/: __init__.py  appeal.py  base.py  orchestration.py  problems.py  problems_schemas.py  services.py  voice.py
app/scripts/: classifier.py  init_db.py
app/scripts/initial_data/: README.md  db_setup.py  main.py  seed_classification.py  (+1 more)
app/services/: __init__.py  appeal.py  classifier.py  health_check.py  orchestrator.py  service_resolver.py  voice.py
app/utils/: __init__.py  security.py
frontend/: .dockerignore  README.md  components.json  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
tests/: E2E_TESTS_README.md  conftest.py  knn_classification_test.py  test_solve_e2e.py  test_solve_e2e_all.py  test_solve_e2e_comprehensive.py  test_solve_e2e_extended.py  verify_setup.py
tests/fixtures/: test_datasets_generator.py
(+20 files in other folders)
